...
    <string name="add_attachment_action">Add attachment</string>
    <string name="empty_spam_action">Empty Spam</string>
    <string name="empty_trash_action">Empty Trash</string>
    <string name="expunge_action">Expunge</string>
    <string name="about_action">About</string>

    <string name="prefs_title">Settings</string>

    <!-- Shown in place of the subject when a message has no subject. Showing this in parentheses is customary. -->
    <string name="general_no_subject">(No subject)</string>
    <string name="general_no_sender">No sender</string>
    <string name="status_loading_more">Loading messages\u2026</string>
    <string name="status_network_error">Connection error</string>
...
    <string name="notification_notify_error_title">Notification error</string>
    <!-- Body of an error notification that is displayed when creating a notification for a new message has failed -->
    <string name="notification_notify_error_text">An error has occurred while trying to create a system notification for a new message. The reason is most likely a missing notification sound.\n\nTap to open notification settings.</string>

    <string name="notification_bg_sync_ticker">Checking mail: <xliff:g id="account">%1$s</xliff:g>:<xliff:g id="folder">%2$s</xliff:g></string>
    <string name="notification_bg_sync_title">Checking mail</string>
    <string name="notification_bg_send_ticker">Sending mail: <xliff:g id="account">%s</xliff:g></string>
    <string name="notification_bg_send_title">Sending mail</string>
    <string name="notification_bg_title_separator">:</string>

    <string name="notification_channel_push_title">Synchronize (Push)</string>
    <string name="notification_channel_push_description">Displayed while waiting for new messages</string>
    <string name="notification_channel_messages_title">Messages</string>
...
    <string name="account_settings_notification_light_blue">Blue</string>
    <string name="account_settings_notification_light_yellow">Yellow</string>
    <string name="account_settings_notification_light_cyan">Cyan</string>
    <string name="account_settings_notification_light_magenta">Magenta</string>

    <string name="account_settings_composition_title">Message composition options</string>
    <string name="account_settings_composition_label">Composition defaults</string>
    <string name="account_settings_composition_summary">Set your default From, Bcc and signature</string>

    <string name="account_settings_identities_label">Manage identities</string>
    <string name="account_settings_identities_summary">Set up alternate \'From\' addresses and signatures</string>

    <string name="manage_identities_title">Manage identities</string>
...
