<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="signature_editor_label">Signature</string>
    <string name="signature_editor_link_label">Link URL</string>
    <string name="signature_editor_save">Save</string>
    <string name="signature_editor_bold">Bold</string>
    <string name="signature_editor_italic">Italic</string>
    <string name="signature_editor_underline">Underline</string>
    <string name="signature_editor_font_size">Text size</string>
    <string name="signature_editor_font_size_small">Small</string>
    <string name="signature_editor_font_size_normal">Normal</string>
    <string name="signature_editor_font_size_large">Large</string>
    <string name="signature_editor_font_size_huge">Huge</string>
    <string name="signature_editor_insert_link">Insert link</string>
    <string name="signature_editor_insert_image">Insert image</string>
    <string name="signature_editor_image_uploading">Uploading signature image…</string>
    <string name="signature_editor_image_insert_failed">Could not insert image. Try a smaller PNG or JPEG.</string>
    <string name="signature_editor_image_size_small">Small</string>
    <string name="signature_editor_image_size_medium">Medium</string>
    <string name="signature_editor_image_size_original">Original</string>
</resources>
